--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+*.cs linguist-detectable=true
 *.css linguist-detectable=false
 *.js linguist-detectable=false
